[package]
name = "noname"
version = "0.7.0"
edition = "2021"
build = "build.rs"
description = "a programming language for writing zkapps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
fs_extra = "1.3.0"
dirs = "4.0"

[dependencies]
ark-ec = "0.4.2" # elliptic curve library
ark-ff = "0.4.2"
ark-bls12-381 = "0.4.0" # bls12-381 curve for r1cs backend
ark-relations = "0.4.0"
ark-bn254 = "0.4.0" # bn128 curve for r1cs backend
ark-serialize = "0.4.2" # serialization of arkworks types
axum = { version = "0.7.7", features = ["macros"] } # web server
base64 = "0.22.1" # for base64 encoding
educe = { version = "0.6", default-features = false, features = [
    "Hash",
    "PartialEq",
    "PartialOrd",
] }
ena = "0.14.0" # union-find implementation for the wiring
hex = "0.4.3"
num-bigint = { version = "0.4.3", features = ["serde"] } # big int library
camino = "1.1.1" # to replace Path and PathBuf
clap = { version = "4.0.5", features = ["derive"] } # CLI library
dirs = "4.0.0" # helper functions (e.g. getting the home directory)
itertools = "0.10.3" # useful iter traits
kimchi = { git = "https://github.com/o1-labs/proof-systems"} # ZKP
miette = { version = "5.0.0", features = ["fancy"] }                                 # nice errors
num-traits = "0.2.15"                                                                # useful traits on big ints
once_cell = "1.15.0"                                                                 # for lazy statics
regex = "1.6.0"                                                                      # for regexes
rmp-serde = "1.1.1"                                                                  # for serialization
serde_with = { version = "3.11.0", features = ["json"] }
serde_json = "1.0.85"                                                                # to (de)serialize JSON
serde = "1.0.144"                                                                    # to (de)serialize objects
thiserror = "1.0.31"                                                                 # helpful error traits
toml = "0.8.8"                                                                       # to parse manifest files
constraint_writers = { git = "https://github.com/iden3/circom.git", tag = "v2.1.8" } # to generate r1cs file
num-bigint-dig = "0.6.0"                                                             # to adapt for circom lib
rand = "0.8.5"
rstest = "0.19.0"                                                                    # for testing different backend cases
rug = "1.26.1"                                                                       # circ uses this for integer type
circ = { git = "https://github.com/circify/circ", rev = "8140b1369edd5992ede038d2e9e5721510ae7065" }                                # for compiling to circ IR
circ_fields = { git = "https://github.com/circify/circ", rev = "8140b1369edd5992ede038d2e9e5721510ae7065", subdir = "circ_fields" } # for field types supported by circ
fxhash = "0.2.1"                                                                                                                    # hash algorithm used by circ
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
tracing-subscriber = "0.3.18"
